--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,28 @@
 :root{
-    --light-text: black;
+    --main-text: rgb(81, 31, 173);
 }
 
 body{
     font-family: Jetbrains Mono NF, monospace;
+    background-color: #001400;
+    background-image: repeating-linear-gradient(
+        to bottom,
+        #001400 0 6px,
+        #003800 6px 7px
+    );
+    background-attachment: fixed;
+    color: var(--main-text);;
+}
+
+div.container {
+    background-color: #000000;
+    padding-bottom: 10px;
+}
+div.container h1 {
+    padding: 10px;
+}
+section#webring{
+    margin-top: 10px;
 }
 #theme-toggle {
     position: fixed;
@@ -16,26 +35,26 @@ p {
     margin-left: 40px;
 }
 
-#projects, #about-me {
+#project, .title, #legend{
     margin-left: 20px;
 }
 
 li {
     list-style-type: none;
-    margin-left: 40px;
+    margin-left: 20px;
 }
 
-a {
-    color: var(--light-text);
+section#projects a, ul#downloads  a{
+    color: var(--main-text);
     text-decoration: none;
     display: block;
     padding-bottom: 5px;
 }
 
-a:hover {
+section#projects a:hover, ul#downloads a:hover {
     text-decoration: dashed underline;
     text-underline-offset: 8px;
-    text-decoration-color: rgb(76, 0, 255);
+    text-decoration-color: rgb(115, 255, 0);
 }
 
 #webring nav {
